# sqlite-extension-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
.github/workflows/: test.yaml
bindings/python/: README.md  setup.py  version.py.tmpl
bindings/python/sqlite_rot13/: __init__.py  version.py
scripts/: rename-wheels.py
src/: fiddle.make  rot13.c  rot13.h.in  sqlite3_wasm_extra_init.c
tests/: test-loadable.py  test-python.py
